2009-11-28 Borut Razem <borut.razem AT siol.net>

	* as/asxxsrc/asdata.c, as/asxxsrc/asmain.c, as/asxxsrc/asxxxx.h:
	  mark sdas specifics
	* as/asxxsrc/sdas.c, as/asxxsrc/sdas.h, as/link/aslink.h,
	  as/link/hc08/lkarea.c, as/link/hc08/lkmain.c, as/link/hc08/lkmem.c,
	  as/link/hc08/Makefile.aslink, as/link/hc08/Makefile.in,
	  as/link/lkmain.c, as/link/Makefile.in, as/link/mcs51/lkmain.c,
	  as/link/mcs51/Makefile.aslink, as/link/mcs51/Makefile.in,
	  as/link/z80/linkgbz80.dsp, as/link/z80/linkz80.dsp,
	  as/link/z80/lkarea.c, as/link/z80/lkgb.c, as/link/z80/lkmain.c,
	  as/link/z80/lkmem.c, as/link/z80/Makefile.in, src/ds390/main.c,
	  src/hc08/main.c, src/mcs51/main.c, src/z80/main.c,
	  as/link/sdlink.[ch]:
	  lkmain.c unification; linkers renamed to sdlinkXXXX

2009-11-27 Borut Razem <borut.razem AT siol.net>

	* sim/ucsim/config.guess, sim/ucsim/ltmain.sh, sim/ucsim/config.sub:
	  upgraded to libtool 2.2.5,
	  fixed dug #2897829: ancient-libtool sim/ucsim/ltmain.sh 1.4.2

2009-11-06 Raphael Neider <rneider AT web.de>

	* src/pic/gen.c (pic14_getDataSize): use true size of generic
	  pointers to fix assignment of the result of pointer arithmetics

2009-11-05 Raphael Neider <rneider AT web.de>

	* src/pic/gen.c (genUnpackBits): setup FSR before using it, fixes
	  "[Sdcc-user] The damned loop from hell"; plus cosmetic changes

2009-11-04 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCmem.c(defaultOClass, allocDefault): refactored
	* src/SDCCmem.h: added defaultOClass
	* src/SDCCsymt.c(processFuncArgs): use defaultOClass to support storage
	  class in parameters, fixes bug 2761883
	* support/regression/tests/bug2761883.c: new, added
	* doc/sdccman.lyx: removed warning about ignored storage class in params

2009-11-02 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c(constExprTree): struct fields have a constant offset

2009-11-01 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCglue.c(initValPointer): fixed bug 1503239