@@ -715,7 +715,7 @@ getRegsWritten (lineNode *line)
 */
 static const char *_linkCmd[] =
 {
-  "sdlink", "-nf", "\"$1\"", NULL
+  "sdld", "-nf", "\"$1\"", NULL
 };
 
 /* $3 is replaced by assembler.debug_opts resp. port->assembler.plain_opts */
